--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_SECRET }}
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/bruttrack
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/bruttrack
 
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/bruttrack
+        run: docker push ${{ secrets.DOCKER_USER }}/bruttrack
